# FSUminho_Sensoring_Car_System

./: CMakeCache.txt.prev  CMakeLists.txt  CMakeLists.txt.user.AhOpER  Makefile  README.md  main.cpp
Classes/: datagram.cpp  datagram.h  defines.h  dummy_spi.cpp  dummy_spi.h  fsUminhoSensoringSystem.h  main_libs.h
Classes/c_actuator/: c_actuator.cpp  c_actuator.h
Classes/c_analog_sensor/: c_analog_sensor.cpp  c_analog_sensor.h
Classes/c_analog_to_spi/: c_analog_to_spi.cpp  c_analog_to_spi.h
Classes/c_apps/: c_apps.cpp  c_apps.h
Classes/c_brake_pressure/: c_brake_pressure.cpp  c_brake_pressure.h
Classes/c_datagram/: datragram_and_frame.cpp  datragram_and_frame.h
Classes/c_digital_sensor/: c_digital_sensor.cpp  c_digital_sensor.h
Classes/c_display_interface/: c_display_interface.cpp  c_display_interface.h
Classes/c_lora_interface/: c_lora_interface.cpp  c_lora_interface.h
Classes/c_main_system/: c_main_system.cpp  c_main_system.h
Classes/c_wssensor/: c_wssensor.cpp  c_wssensor.h
error_handling/: error_handling.cpp  error_handling.h  error_list.h
shared_memory/: shared_memory.cpp  shared_memory.h  shm_defines.h  shm_variables.cpp
signals/: signal_behabvior.cpp  signal_handlers.h
spi/: spi_code.cpp  spi_code.h  spi_defines.h  spi_variables.cpp
thread_behavior/: action_thread.cpp  action_thread.h  lora_comms_thread.cpp  lora_connection_thread.cpp  lora_send_data_thread.cpp  lora_send_data_thread.h  main_thread_libs.h  read_analog_sensor_thread.cpp  read_digital_sensor_thread.cpp  thread_behavior.h  thread_defines.h  thread_variables.cpp  update_display_thread.cpp
wss_isr/: wss_isr.cpp  wss_ist.h
